@@ -334,7 +334,8 @@ img.tiny {
     }
 }
 
-.settings {
+.settings,
+.platform-fab {
     .platform-img {
         max-width: 2rem;
         max-height: 2rem;
